<?xml version="1.0"?>
<package format="2">
  <name>all_sensors_launch</name>
  <version>0.0.0</version>
  <description>All sensors launch file</description>
  <maintainer email="you@example.com">Your Name</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

