<?xml version="1.0"?>
<package format="2">
  <name>lidar_transform</name>
  <version>0.0.0</version>
  <description>The lidar_transform package</description>
  <maintainer email="18137016961@163.com">leo-bo </maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>rclcpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>tf2_geometry_msgs</build_depend>
  <build_depend>pcl_ros</build_depend>  
  <build_depend>pcl_conversions</build_depend>

  <exec_depend>rclcpp</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>tf2_geometry_msgs</exec_depend>
  <exec_depend>pcl_ros</exec_depend>
  <exec_depend>pcl_conversions</exec_depend>
  
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
