<?xml version="1.0"?>
<package format="3">
  <name>starneto_ros_msgs</name>
  <version>0.1.0</version>
  <description>Messages common to many packages</description>

  <maintainer email="hcr2077@outlook.com">Huang Chenrui</maintainer>
  <license>Apache License 2.0</license>
  <author email="hcr2077@outlook.com">Huang Chenrui</author>

  <!--Build tools-->
  <buildtool_depend>ament_cmake</buildtool_depend>
  <!-- <buildtool_depend>genmsg</buildtool_depend> -->

  <!--For loading custom messages-->
  <build_depend>rosidl_default_generators</build_depend>
  <build_export_depend>rosidl_default_runtime</build_export_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>
  <!--Other depends-->
  <!-- <depend>roscpp</depend> -->
  <!-- <depend>rospy</depend> -->
  <depend>std_msgs</depend>
  <!-- <depend>geometry_msgs</depend> -->

  <export>
  <build_type>ament_cmake</build_type>
  </export>
</package>
